Commit last changes from prev quarter

--- a/css/exercises/09-grid-areas.css
+++ b/css/exercises/09-grid-areas.css
@@ -6,6 +6,18 @@
   grid-area: article;
 }
 
+.aside {
+  grid-area: aside;
+}
+
+.section {
+  grid-area: section;
+}
+
+.footer {
+  grid-area: footer;
+}
+
 .grid-container {
   display: grid;
   height: 97vh;
@@ -13,12 +25,46 @@
   grid-template-rows: repeat(8, 1fr);
   gap: 10px;
   grid-template-areas:
-    'header'
-    'article'
-    'article'
-    'section'
-    'section'
-    'section'
-    'aside'
-    'footer';
+    "header"
+    "article"
+    "article"
+    "section"
+    "section"
+    "section"
+    "aside"
+    "footer";
+}
+
+.grid-item {
+  text-align: left;
+}
+
+@media (min-width: 768px) {
+  .grid-container {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-areas:
+      "header header header"
+      "article article aside"
+      "article article aside"
+      "article article aside"
+      "article article aside"
+      "section section section"
+      "section section section"
+      "footer footer footer";
+  }
+}
+
+@media (min-width: 1024px) {
+  .grid-container {
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(7, 1fr);
+    grid-template-areas:
+      "header header header header header"
+      "aside article article article article"
+      "aside article article article article"
+      "aside article article article article"
+      "section section section section section"
+      "section section section section section"
+      "footer footer footer footer footer";
+  }
 }
