--- a/css/exercises/01-selectors.css
+++ b/css/exercises/01-selectors.css
@@ -10,12 +10,34 @@
 
 /* Use attribute selectors for the first part of the exercise */
 
-li[class] {
-  color: var(--red);
+li[id="cat"] {
+  color: var(--teal);
+}
+
+li[class~="dog"] {
+  color: var(--royalblue);
+}
+li[class="dog"] {
+  color: var(--magenta);
+}
+li[class="donkey"] {
+  color: var(--royalblue);
+}
+
+li[class="hedgehog"] {
+  color: var(--magenta);
 }
 
 /* Use descendant, child, and sibling selectors for the second part */
 
 section li {
   color: var(--green);
+}
+
+.first ~ li {
+  color: var(--magenta);
+}
+
+.second + li {
+  color: var(--royalblue);
 }
