--- a/css/exercises/02-pseudo.css
+++ b/css/exercises/02-pseudo.css
@@ -2,3 +2,16 @@
   width: 600px;
   margin: 40px auto;
 }
+
+p::first-letter {
+  font-size: 3em;
+}
+
+p::first-line {
+  font-style: italic;
+  color: #0ff;
+}
+
+p:hover {
+  background-color: blueviolet;
+}
