--- a/css/exercises/05-position.css
+++ b/css/exercises/05-position.css
@@ -5,22 +5,41 @@
 }
 
 .box {
+  width: 300px;
+  height: 400px;
   padding: 10px;
+  display: inline-block;
   color: var(--white);
 }
 
+.main {
+  margin-top: 80px;
+}
+
 .static {
+  position: static;
   background-color: var(--darkviolet);
 }
 
 .relative {
+  position: relative;
   background-color: var(--purple);
 }
 
 .absolute {
+  position: absolute;
+  width: 100%;
+  height: 70px;
+  top: 0;
+  left: 0;
   background-color: var(--maroon);
 }
 
 .fixed {
+  position: fixed;
+  width: 100%;
+  height: 70px;
+  bottom: 0;
+  left: 0;
   background-color: var(--darkgolden);
 }
