--- a/css/exercises/06-media-queries.css
+++ b/css/exercises/06-media-queries.css
@@ -1,6 +1,62 @@
+nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: black;
+}
+
+nav ul {
+  margin: 0;
+  padding-left: 0%;
+}
+
+/*
+nav ul li {
+}
+*/
+
+nav ul li:hover {
+  background-color: var(--gray1);
+}
+
+nav ul li a {
+  padding: 0.5em 1em;
+  display: block;
+  color: white;
+  text-decoration: none;
+}
+
+.main {
+  margin-top: 125px;
+}
+
+body {
+  background: var(--purple);
+  color: var(--white);
+}
+
+/*li*/
+#navbutton {
+  display: block;
+}
+
+@media (min-width: 768px) {
+  body {
+    background: var(--orange);
+    color: var(--white);
+  }
+  #navbutton {
+    display: inline-block;
+  }
+}
+
 @media (min-width: 1024px) {
   body {
     background: var(--green);
     color: var(--white);
+  }
+  #navbutton {
+    display: inline-block;
   }
 }
