--- a/css/exercises/07-flexbox.css
+++ b/css/exercises/07-flexbox.css
@@ -1,20 +1,67 @@
 .flex-container {
   background-color: rgb(190, 190, 231);
+  display: flex;
 }
 
 /* Flex Container 1 */
+.flex-container-1 {
+  display: none;
+  background-color: white;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
 
 /* Flex Container 2 */
-
+.flex-container-2 {
+  display: none;
+  background-color: white;
+  /* flex-direction: row-reverse; */
+  /* flex-wrap: wrap; */
+  /* flex-direction and flex-wrap are equiv to: */
+  flex-flow: row-reverse wrap;
+}
 /* Flex Container 3 */
-
 /* use height: 400px; on the container */
+.flex-container-3 {
+  height: 400px;
+  display: none;
+  background-color: white;
+  /* flex-direction: column-reverse;
+  flex-wrap: wrap-reverse; */
+  flex-flow: column-reverse wrap;
+  align-items: flex-end;
+}
 
 /* Flex Container 4 */
-
+.flex-container-4 {
+  display: none;
+  flex-flow: row wrap-reverse;
+  justify-content: space-evenly;
+}
 /* Flex Container 5 */
-
+.flex-container-5 {
+  height: 400px;
+  display: none;
+  background-color: white;
+  justify-content: flex-start;
+  align-items: center;
+}
+.flex-container-5 .item1,
+.flex-container-5 .item3,
+.flex-container-5 .item6 {
+  height: 200px;
+}
+.flex-container-5 .item2,
+.flex-container-5 .item8 {
+  height: 300px;
+}
 /* Flex Container 6 */
+.flex-container-6 {
+  height: 300px;
+  background-color: white;
+  flex-flow: column wrap;
+}
 
 .flex-container-6 .flex-item {
   width: 400px;
